THRIFT-4131: js / WebSocket / fix handling oneway methods Client: js Patch: Martin Hejnfelt <mh@newtec.dk>

This closes #1372